--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=petshop-oracle
+
+server.port=8080
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
+
+#oracle datasource
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orcl
+spring.datasource.username="system"
+spring.datasource.password="Tapiero123"
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+#hibernate / JPA
+spring.jpa.database-platform=org.hibernate.dialect.Oracle19cDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
